# turbo_gate

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  git_tags_backup.txt  pyproject.toml
.github/workflows/: bump.yml  cd.yml  ci.yml
deployment/: DEPLOYMENT_FIXES.md
deployment/ansible/inventory/: hosts.yml  inventory.tpl
deployment/ansible/playbooks/: deploy_app.yml  harden_server.yml  security_hardening.yml  setup_fail2ban.yml  setup_nginx.yml  setup_ssl_sync.yml  setup_swarm.yml
deployment/ansible/playbooks/templates/: 50unattended-upgrades.j2  custom-exclusions.conf  docker-compose-waf.yml.j2  docker-compose.yml.j2  docker-compose.yml.j2   jail.local.j2  modsecurity.conf.j2  modsecurity_rules.conf.j2  nginx-waf.conf.j2  nginx.conf.j2  tls.yaml.j2
deployment/docker/: docker-compose.prod.yml
deployment/docker/ngix/: ngix.config
deployment/scripts/: deploy.sh  node_init.sh  sync-certificates.sh  validate-traefik-migration.sh
deployment/terraform/: dns.tf  load_balancer.tf  main.tf  outputs.tf  variables.tf  versions.tf
gateway_service/: __init__.py  app.py  flask_config.py
gateway_service/middleware/: __init__.py  middleware.py
gateway_service/routes/: __init__.py  routes.py
gateway_service/service/: __init__.py  services.py
gateway_service/utils/: __init__.py  utils.py
scripts/: __init__.py  health_check.py  run_dev.py
tests/: __init__.py  conftest.py  test_app.py  test_routes.py
